@@ -22,6 +22,7 @@ Version 1.0.8.8
      * q/kdb+ (Ian Roddis)
      * RPM Specification Files (Paul Grinberg)
      * Unicon (Matt Oates)
+     * Vala (Nicolas Joseph)
      * XBasic (José Gabriel Moya Yangüela)
   -  Improvements to language files (BenBE)
      * Major reworks and improvements to OCaml language file (BenBE)
